test/tests/stages/18_structures/invalid_parse/struct_member_is_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[11]:
  struct
  identifier(s)
  {
  int
  identifier(foo)
  (
  void
  )
  ;
  }
  ;
